    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.

  * doc/README.developers:
    + [NT] New file.  Thanks to Jeremiah C. Foster for the initial
      contribution.

  * lib/Util.pm:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed a requirement for fields that was not needed.

  * private/*:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.

 -- Niels Thykier <niels@thykier.net>  Wed, 10 Aug 2011 21:09:24 +0200

lintian (2.5.2) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - debian-rules-uses-deprecated-makefile
      - debian-rules-uses-or-modifies-user-only-variable
      - duplicate-changelog-files
      - package-has-long-file-name
      - source-package-component-has-long-file-name
      - udeb-uses-non-gzip-data-tarball
      - upstart-job-in-etc-init.d-not-registered-via-update-rc.d
    + Removed:
      - calls-suidperl-directly
      - suid-perl-script-but-no-perl-suid-dep

  * checks/*:
    + [NT] Migrated to use new methods in the Lintian::Collect
      interfaces rather than accessing the Lab directly.
    + [NT] Removed "fields" from Needs-Info.
  * checks/{debconf,conffiles}.desc:
    + [NT] Added missing bin-pkg-control Needs-Info.
  * checks/{cruft,fields}{,.desc}:
    + [NT] Relocated doc pkg not arch all tag; it was never
      triggered since cruft was a source check and the tag
      could only be triggered for binary packages.
  * checks/binaries:
    + [NT] Added lib/${MULTIARCH_DIR} to the list of paths to
      check for public shared libraries.  Thanks to Sven Joachim
      for the report and the patch.  (Closes: #630698)
    + [NT] Recognise .gox files as object files that cannot be
      stripped.  Thanks to Matthias Klose for the report.
      (Closes: #624521)
    + [NT] Do not assume that the architecture field is present.
    + [NT] Emit "arch-dependent-file-in-usr-share" and